Added question 8 of the Exercise List in MBA Data Science/Fundamentals of Statistics

--- a/MBA Data Science/Fundamentals of Statistics/Exercise List/Python Solutions.ipynb
+++ b/MBA Data Science/Fundamentals of Statistics/Exercise List/Python Solutions.ipynb
@@ -89,7 +89,143 @@
    "id": "377360b8",
    "metadata": {},
    "source": [
-    "## Q8"
+    "<hr style=\"height:1px;background-color:#999;boder:none\" />\n",
+    "<h2> Q8 </h2>\n",
+    "It was collected the total rainfall depth in millimetres (mm) over 14 days at two locations, A and B. A researcher noted that location A appears to have higher variability in the rainfall depth compared to location B. Perform a F-test with a 5%-level of significance to verify whether the variability in the total rainfall depth at location A is statistically higher than the variability at location B. The data is available in the sheet 'Exercício 8' from the file <a href=\"Questions Data.xlsx\">Questions Data.xlsx</a>.\n",
+    "<hr style=\"height:1px;background-color:#999;boder:none\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f0f2ca3",
+   "metadata": {},
+   "source": [
+    "Assuming that the total rainfall depth is normally distributed, we can apply the F-test considering the following hypotheses:\n",
+    "\n",
+    "$ H_0: \\hat{F} \\leq 1 $ <br />\n",
+    "$ H_1: \\hat{F} > 1 $\n",
+    "\n",
+    "where $ \\hat{F} = \\hat{\\sigma}_{A}^2 / \\hat{\\sigma}_{B}^2 $ is the **test statistic**, which follows a *Fisher-Snedecor distribution* (a.k.a F-distribution) f with $ n - 1 $ ($ n $ is the sample size of A) and $ m - 1 $ ($m$ is the sample size of B) *degrees of freedom*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "02c390fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Local A (mm)</th>\n",
+       "      <th>Local B (mm)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8.9</td>\n",
+       "      <td>5.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7.7</td>\n",
+       "      <td>4.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8.6</td>\n",
+       "      <td>6.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3.9</td>\n",
+       "      <td>5.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7.6</td>\n",
+       "      <td>6.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Local A (mm)  Local B (mm)\n",
+       "0           8.9           5.6\n",
+       "1           7.7           4.9\n",
+       "2           8.6           6.6\n",
+       "3           3.9           5.9\n",
+       "4           7.6           6.5"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Read data from Excel file and create a DataFrame\n",
+    "df = pd.read_excel(\n",
+    "    \"Questions Data.xlsx\",\n",
+    "    sheet_name = 'Exercício 8',\n",
+    "    usecols = 'A:B',\n",
+    "    nrows = 14,\n",
+    "    dtype = {'Local A (mm)': 'float64', 'Local A (mm)': 'float64'}\n",
+    ")\n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "8ed80c11",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F_statistic = 2.76118\n",
+      "p_value = 0.03917\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluating the F-statistic\n",
+    "F_stats = df['Local A (mm)'].var() / df['Local B (mm)'].var()\n",
+    "p_value = 1 - stats.f.cdf(F_stats, df.shape[0] - 1, df.shape[0] - 1)\n",
+    "\n",
+    "print(\"F_statistic = {:,.5f}\".format(F_stats))\n",
+    "print(\"p_value = {:,.5f}\".format(p_value))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "508eda12",
+   "metadata": {},
+   "source": [
+    "Since $ p_{value} < \\alpha $ ($ 0.039 < 0.05 $), we can reject the null hypothesis with a 5% level of significance. Therefore, we have evidence that the total rainfall depth varies more at A than at B."
    ]
   },
   {
@@ -100,7 +236,7 @@
     "<hr style=\"height:1px;background-color:#999;boder:none\" />\n",
     "<h2> Q9 </h2>\n",
     "\n",
-    "(Fávero and Belfiore, 2017, Cap. 7) We wish to compare the mean waiting time to be attended at two hospitals considering a sample with 20 patients at each hospital. Check whether there is a difference between the mean waiting times at both hospitals assuming a significance level of $ \\alpha = 1\\% $. Also, evaluate the confidence intervals for each mean waiting time. All necessary data are available in the sheet *Exercício 9* from the file <a href=\"Questions Data.xlsx\">Questions Data.xlsx</a>\n",
+    "(Fávero and Belfiore, 2017, Cap. 7) We wish to compare the mean waiting time to be attended at two hospitals considering a sample with 20 patients at each hospital. Check whether there is a difference between the mean waiting times at both hospitals assuming a significance level of $ \\alpha = 1\\% $. Also, evaluate the confidence intervals for each mean waiting time. All necessary data are available in the sheet *Exercício 9* from the file <a href=\"Questions Data.xlsx\">Questions Data.xlsx</a>.\n",
     "<hr style=\"height:1px;background-color:#999;boder:none\" />"
    ]
   },
@@ -109,7 +245,16 @@
    "id": "a4770e90",
    "metadata": {},
    "source": [
-    "Since the sample size is small (less than 30), we shall assume the Student's t-statistic to perform the analysis. Therefore, we shall assume a normally distributed sample."
+    "Since the sample size is small (less than 30), we shall assume the Student's t-statistic to perform a t-test. Therefore, we shall assume a normally distributed sample. Let us assuming the following hypotheses:\n",
+    "\n",
+    "$$ H_0: \\bar{X}_1 = \\bar{X}_2 \\\\ H_1: \\bar{X}_1 \\neq \\bar{X}_2 $$\n",
+    "\n",
+    "where $ \\bar{X}_1 $ and $ \\bar{X}_2 $ are the sample waiting times. \n",
+    "The **test statistic** $ \\hat{T} $ is given by\n",
+    "\n",
+    "$$ \\hat{T} = \\frac{\\bar{X}_1 - \\bar{X}_2}{\\sqrt{s^2_1 / n_1 + s^2_2 / n_2}} $$\n",
+    "\n",
+    "where $ s^2_1 $, $ s_2^2 $, $ n_1 $, and $ n_2 $ are variances and the sample sizes of both hospitals respectively. The test statistic follows a Student's t distribution with $ n_1 + n_2 - 2 $ *degrees of freedom*."
    ]
   },
   {
@@ -122,10 +267,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "cdb05e5e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Hospital 1</th>\n",
+       "      <th>Hospital 2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>72</td>\n",
+       "      <td>66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>58</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>91</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>88</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>70</td>\n",
+       "      <td>76</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Hospital 1  Hospital 2\n",
+       "0          72          66\n",
+       "1          58          40\n",
+       "2          91          55\n",
+       "3          88          70\n",
+       "4          70          76"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Read data from Excel file and create a DataFrame\n",
     "df = pd.read_excel(\n",
@@ -134,12 +348,14 @@
     "    usecols = 'A:B',\n",
     "    nrows = 20,\n",
     "    dtype = {'Hospital 1': 'int64', 'Hospital 2': 'int64'}\n",
-    ")"
+    ")\n",
+    "\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 26,
    "id": "7ec7a339",
    "metadata": {},
    "outputs": [
@@ -154,7 +370,7 @@
    ],
    "source": [
     "#\n",
-    "# Student's t-test two compare two means from independent samples\n",
+    "# Student's t-test to compare two means from independent samples\n",
     "#--\n",
     "# Using ttest_ind from Scipy library\n",
     "t_stats, p_value = stats.ttest_ind(df['Hospital 1'], df['Hospital 2'])\n",
@@ -163,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 27,
    "id": "b75dd850",
    "metadata": {},
    "outputs": [
