Added question 12 in MBA Data Science/Fundamentals of Statistics/Exercises list

--- a/MBA Data Science/Fundamentals of Statistics/Exercise List/Python Solutions.ipynb
+++ b/MBA Data Science/Fundamentals of Statistics/Exercise List/Python Solutions.ipynb
@@ -91,15 +91,16 @@
    "source": [
     "<hr style=\"height:1px;background-color:#999;boder:none\" />\n",
     "<h2> Q8 </h2>\n",
-    "It was collected the total rainfall depth in millimetres (mm) over 14 days at two locations, A and B. A researcher noted that location A appears to have higher variability in the rainfall depth compared to location B. Perform a F-test with a 5%-level of significance to verify whether the variability in the total rainfall depth at location A is statistically higher than the variability at location B. The data is available in the sheet 'Exercício 8' from the file <a href=\"Questions Data.xlsx\">Questions Data.xlsx</a>.\n",
-    "<hr style=\"height:1px;background-color:#999;boder:none\" />"
+    "It was collected the total rainfall depth in millimetres (mm) over 14 days at two locations, A and B. A researcher noted that location A appears to have higher variability in the rainfall depth compared to location B. Perform a F-test with a 5%-level of significance to verify whether the variability in the total rainfall depth at location A is statistically higher than the variability at location B. The data is available in the sheet 'Exercício 8' from the file <a href=\"Questions Data.xlsx\">Questions Data.xlsx</a>."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5f0f2ca3",
+   "id": "1686d4c8",
    "metadata": {},
    "source": [
+    "<h3>Answer</h3>\n",
+    "\n",
     "Assuming that the total rainfall depth is normally distributed, we can apply the F-test considering the following hypotheses:\n",
     "\n",
     "$ H_0: \\hat{F} \\leq 1 $ <br />\n",
@@ -110,8 +111,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "02c390fc",
+   "execution_count": 29,
+   "id": "f7ca7d4b",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +179,7 @@
        "4           7.6           6.5"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,8 +199,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "8ed80c11",
+   "execution_count": 30,
+   "id": "4174cfe1",
    "metadata": {},
    "outputs": [
     {
@@ -207,6 +208,7 @@
      "output_type": "stream",
      "text": [
       "F_statistic = 2.76118\n",
+      "Critical value = 2.57693\n",
       "p_value = 0.03917\n"
      ]
     }
@@ -214,15 +216,17 @@
    "source": [
     "# Evaluating the F-statistic\n",
     "F_stats = df['Local A (mm)'].var() / df['Local B (mm)'].var()\n",
+    "critical_value = stats.f.ppf(1 - 0.05, df.shape[0] - 1, df.shape[0] - 1)\n",
     "p_value = 1 - stats.f.cdf(F_stats, df.shape[0] - 1, df.shape[0] - 1)\n",
     "\n",
     "print(\"F_statistic = {:,.5f}\".format(F_stats))\n",
+    "print(\"Critical value = {:,.5f}\".format(critical_value))\n",
     "print(\"p_value = {:,.5f}\".format(p_value))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "508eda12",
+   "id": "407858ba",
    "metadata": {},
    "source": [
     "Since $ p_{value} < \\alpha $ ($ 0.039 < 0.05 $), we can reject the null hypothesis with a 5% level of significance. Therefore, we have evidence that the total rainfall depth varies more at A than at B."
@@ -236,8 +240,8 @@
     "<hr style=\"height:1px;background-color:#999;boder:none\" />\n",
     "<h2> Q9 </h2>\n",
     "\n",
-    "(Fávero and Belfiore, 2017, Cap. 7) We wish to compare the mean waiting time to be attended at two hospitals considering a sample with 20 patients at each hospital. Check whether there is a difference between the mean waiting times at both hospitals assuming a significance level of $ \\alpha = 1\\% $. Also, evaluate the confidence intervals for each mean waiting time. All necessary data are available in the sheet *Exercício 9* from the file <a href=\"Questions Data.xlsx\">Questions Data.xlsx</a>.\n",
-    "<hr style=\"height:1px;background-color:#999;boder:none\" />"
+    "\n",
+    "(Fávero and Belfiore, 2017, Cap. 7) We wish to compare the mean waiting time to be attended at two hospitals considering a sample with 20 patients at each hospital. Check whether there is a difference between the mean waiting times at both hospitals assuming a significance level of $ \\alpha = 1\\% $. Also, evaluate the confidence intervals for each mean waiting time. All necessary data are available in the sheet *Exercício 9* from the file <a href=\"Questions Data.xlsx\">Questions Data.xlsx</a>."
    ]
   },
   {
@@ -245,6 +249,8 @@
    "id": "a4770e90",
    "metadata": {},
    "source": [
+    "<h3>Answer</h3>\n",
+    "\n",
     "Since the sample size is small (less than 30), we shall assume the Student's t-statistic to perform a t-test. Therefore, we shall assume a normally distributed sample. Let us assuming the following hypotheses:\n",
     "\n",
     "$$ H_0: \\bar{X}_1 = \\bar{X}_2 \\\\ H_1: \\bar{X}_1 \\neq \\bar{X}_2 $$\n",
@@ -267,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "id": "cdb05e5e",
    "metadata": {},
    "outputs": [
@@ -335,7 +341,7 @@
        "4          70          76"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "id": "7ec7a339",
    "metadata": {},
    "outputs": [
@@ -363,7 +369,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "t_statistic = 6.92082 (6.920824e+00) \n",
+      "t_statistic = 6.92082\n",
       "p_value = 0.00000 (3.147828e-08)\n"
      ]
     }
@@ -374,12 +380,14 @@
     "#--\n",
     "# Using ttest_ind from Scipy library\n",
     "t_stats, p_value = stats.ttest_ind(df['Hospital 1'], df['Hospital 2'])\n",
-    "print(\"t_statistic = {:,.5f} ({:,e}) \\np_value = {:,.5f} ({:,e})\".format(t_stats, t_stats, p_value, p_value))"
+    "\n",
+    "print(\"t_statistic = {:,.5f}\".format(t_stats))\n",
+    "print(\"p_value = {:,.5f} ({:,e})\".format(p_value, p_value))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
    "id": "b75dd850",
    "metadata": {},
    "outputs": [
@@ -387,7 +395,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "t_statistic = 6.92082 (6.920824e+00) \n",
+      "Critical Value = 2.71156\n",
+      "t_statistic = 6.92082\n",
       "p_value = 0.00000 (3.147828e-08)\n"
      ]
     }
@@ -396,8 +405,11 @@
     "# Evaluating the t-Statistics and the p-value \"manually\"\n",
     "t_stats = (df['Hospital 1'].mean() - df['Hospital 2'].mean()) / np.sqrt(df['Hospital 1'].var() / df.shape[0] + df['Hospital 2'].var() / df.shape[0])\n",
     "p_value = 2 * stats.t.cdf(-abs(t_stats), df = df.shape[0] + df.shape[0] - 2)\n",
+    "critical_value = abs(stats.t.ppf(0.01/2, df = 2*df.shape[0] - 2))\n",
     "\n",
-    "print(\"t_statistic = {:,.5f} ({:,e}) \\np_value = {:,.5f} ({:,e})\".format(t_stats, t_stats, p_value, p_value))"
+    "print(\"Critical Value = {:,.5f}\".format(critical_value))\n",
+    "print(\"t_statistic = {:,.5f}\".format(t_stats))\n",
+    "print(\"p_value = {:,.5f} ({:,e})\".format(p_value, p_value))"
    ]
   },
   {
@@ -425,12 +437,12 @@
     "\n",
     "$$ C = (\\bar{x} - t_{\\nu, \\alpha / 2} \\hat{se},\\ \\bar{x} + t_{\\nu, \\alpha / 2} \\hat{se}), $$\n",
     "\n",
-    "where $ t_{\\nu, \\alpha / 2} = T^{-1}_{\\nu}(1 - \\alpha/2) $ and $ T_{\\nu}^{-1} $ is the inverse cumulative distribution function of the Student's t distribution. Plug $ \\alpha = 0.01 $ and $ \\nu = n - 1 = 19 $ in $ T_{\\nu}^{-1}(1 - \\alpha/2) $, we obtain $ T_{19}^{-1}(0.995) = 7.507891608549317 ... $ (check below). Thus, the confidence interval follows bellow"
+    "where $ t_{\\nu, \\alpha / 2} = T^{-1}_{\\nu}(1 - \\alpha/2) $ and $ T_{\\nu}^{-1} $ is the inverse cumulative distribution function of the Student's t distribution. Plug $ \\alpha = 0.01 $ and $ \\nu = n - 1 = 19 $ in $ T_{\\nu}^{-1}(1 - \\alpha/2) $, we obtain $ T_{19}^{-1}(0.995) = 2.8609346064 ... $ (check below). Thus, the confidence interval follows bellow"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 49,
    "id": "65ffd633",
    "metadata": {},
    "outputs": [
@@ -445,16 +457,16 @@
     }
    ],
    "source": [
-    "z_alpha_over_2 = stats.t.ppf(1 - 0.01 / 2, df.shape[0] - 1)\n",
-    "print(\"t = {:,.10f}\".format(z_alpha_over_2))\n",
+    "t_alpha_over_2 = stats.t.ppf(1 - 0.01 / 2, df.shape[0] - 1)\n",
+    "print(\"t = {:,.10f}\".format(t_alpha_over_2))\n",
     "\n",
     "mean_1 = df['Hospital 1'].mean()\n",
     "se_1 = df['Hospital 1'].sem()\n",
-    "print(\"Confidence Interval (Hospital 1) = ({:,.2f}, {:,.2f})\".format(mean_1 - z_alpha_over_2 * se_1, mean_1 + z_alpha_over_2 * se_1))\n",
+    "print(\"Confidence Interval (Hospital 1) = ({:,.2f}, {:,.2f})\".format(mean_1 - t_alpha_over_2 * se_1, mean_1 + t_alpha_over_2 * se_1))\n",
     "\n",
     "mean_2 = df['Hospital 2'].mean()\n",
     "se_2 = df['Hospital 2'].sem()\n",
-    "print(\"Confidence Interval (Hospital 2) = ({:,.2f}, {:,.2f})\".format(mean_2 - z_alpha_over_2 * se_2, mean_2 + z_alpha_over_2 * se_2))"
+    "print(\"Confidence Interval (Hospital 2) = ({:,.2f}, {:,.2f})\".format(mean_2 - t_alpha_over_2 * se_2, mean_2 + t_alpha_over_2 * se_2))"
    ]
   },
   {
@@ -465,8 +477,7 @@
     "<hr style=\"height:1px;background-color:#999;boder:none\" />\n",
     "<h2> Q10 </h2>\n",
     "\n",
-    "A low-fat yogurt maker claims that each yogurt pot has $60 cal$ of food energy. To verify this information, a random sample with 36 pots is collected. It was observed a mean food energy of $65 cal$ and a standard deviation of $3.5 cal$. Apply the proper hypothesis test and verify if the maker's claim is true considering 5% significance level.\n",
-    "<hr style=\"height:1px;background-color:#999;boder:none\" />"
+    "A low-fat yogurt maker claims that each yogurt pot has $60 cal$ of food energy. To verify this information, a random sample with 36 pots is collected. It was observed a mean food energy of $65 cal$ and a standard deviation of $3.5 cal$. Apply the proper hypothesis test and verify if the maker's claim is true considering 5% significance level."
    ]
   },
   {
@@ -474,6 +485,8 @@
    "id": "c1605bf9",
    "metadata": {},
    "source": [
+    "<h3>Answer</h3>\n",
+    "\n",
     "The sample is not so large since it barely has more than 30 elements. In this case, it is acceptable to apply the Z-test, but the t-test is more appropriate if we assume that sample is normally distributed. We shall perform both and compare their results. Let us consider the following hypothesis:\n",
     "\n",
     "Null hypothesis $H_0: \\mu = 60g$ <br />\n",
@@ -574,8 +587,7 @@
     "<hr style=\"height:1px;background-color:#999;boder:none\" />\n",
     "<h2> Q11 </h2>\n",
     "\n",
-    "A food industry uses a standard amount of salt of 8g with a standard deviation of 1g to prepare a particular product. In a sample of 85 products, it was observed the mean of 8.25g. Check if the observed quantity can be considered statistically higher with 5% significance level.\n",
-    "<hr style=\"height:1px;background-color:#999;boder:none\" />"
+    "A food industry uses a standard amount of salt of 8g with a standard deviation of 1g to prepare a particular product. In a sample of 85 products, it was observed the mean of 8.25g. Check if the observed quantity can be considered statistically higher with 5% significance level."
    ]
   },
   {
@@ -583,6 +595,8 @@
    "id": "72ea2a55",
    "metadata": {},
    "source": [
+    "<h3>Answer</h3>\n",
+    "\n",
     "The sample is large enough to consider the sample mean normally distributed, which is guaranteed by the central limit theory. Therefore, we can apply the right-tailed Z-test assuming the following hypothesis:\n",
     "\n",
     "Null hypothesis $H_0: \\mu \\leq 8g$ <br />\n",
@@ -632,16 +646,52 @@
    "id": "cf5c470e",
    "metadata": {},
    "source": [
-    "## Q12\n"
+    "<hr style=\"height:1px;background-color:#999;boder:none\" />\n",
+    "<h2> Q12 </h2>\n",
+    "\n",
+    "It was collected the weight from 425 products and then it was obtained the sample mean of 226g and a sample standard deviation of 10g. Evaluate the confidence interval for this mean knowing that the sample standard deviation equals the population standard deviation historically. Assume a 5%-level of significance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3df27bcc",
+   "metadata": {},
+   "source": [
+    "<h3>Answer</h3>\n",
+    "\n",
+    "Since the sample size $ \\bar{X} $ is large (n > 30), we can assume that the sample mean follows a normal distribution. Therefore, the confidence interval is given by\n",
+    "\n",
+    "$$ C = (\\bar{X} - z_{\\alpha/2} \\hat{se}, \\bar{X} + z_{\\alpha/2} \\hat{se}) $$\n",
+    "\n",
+    "where $ \\hat{se} = \\sqrt{\\mathbb{V}(\\bar{X})} $ is the standard error, $ z_{\\alpha / 2} = \\Phi^{-1}(1  - \\alpha / 2)$, and $ \\Phi^{-1} $ is the inverse cumulative distribution function of a standard normal."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7e63f731",
+   "execution_count": 51,
+   "id": "f3528cb9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1753536637.py, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [51]\u001b[0;36m\u001b[0m\n\u001b[0;31m    a = sample_mean -\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_mean = 226\n",
+    "sample_size = 425\n",
+    "standard_error = 10 / np.sqrt(sample_size)\n",
+    "alpha = 0.05\n",
+    "z_alpha_over_2 = stats.norm.ppf(1 - alpha/2)\n",
+    "\n",
+    "a = sample_mean - z_alpha_over_2 * sta\n",
+    "\n",
+    "print(\"Confidence Interval (Hospital 2) = ({:,.2f}, {:,.2f})\".format(a, b))"
+   ]
   }
  ],
  "metadata": {
