--- a/MBA Data Science/Fundamentals of Statistics/Exercise List/Python Solutions.ipynb
+++ b/MBA Data Science/Fundamentals of Statistics/Exercise List/Python Solutions.ipynb
@@ -81,7 +81,98 @@
    "id": "4f30937f",
    "metadata": {},
    "source": [
-    "## Q7"
+    "<hr style=\"height:1px;background-color:#999;boder:none\" />\n",
+    "<h2> Q7 </h2>\n",
+    "\n",
+    "(Source: Fávero and Belfiore, 2017, Cap. 8). A group of 60 readers evaluated three romance books and chose one of the three options. Verify statistically whether there is a difference in readers' preferences with a 5%-level of significance. The data is available in the sheet 'Exercício 7' from the file <a href=\"Questions Data.xlsx\">Questions Data.xlsx</a>."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5b74f8a",
+   "metadata": {},
+   "source": [
+    "<h3>Answer</h3>\n",
+    "\n",
+    "The event $ X $ of choosing one of the three books follows a **Multinomial distribution**. Let be $ p = (p_1, p_2, p_3) $ the probabilities of choosing a book and $ n = 60 $ the number of times that the readers chose a book. The random variable $ X = (X_1, X_2, X_3) $ is composed of three *binomial events* so that $ X_i \\sim Binomial(n, p_i),\\ i \\in \\{1, 2, 3\\} $. We must check the following hypotheses:\n",
+    "\n",
+    "$$ H_0: p = (1/3, 1/3, 1/3) \\\\ H_1: p \\neq (1/3, 1/3, 1/3) $$\n",
+    "\n",
+    "Let us consider the following **test statistic**\n",
+    "\n",
+    "$$ T = \\sum_{i = 1}^{3} \\frac{(X_i - n/3)^2}{n/3} $$\n",
+    "\n",
+    "Since the sample size is considerable large ($ n > 30 $), we can approximate the binomial distribution by a normal distribution supported by the *central limit theorem* (sum of Bernoulli trials). Therefore, $ T $ can be seen as a biased estimator of the variance whose sample follows a standard normal distribution. In this condition, this statistics follows a $ \\chi^2 $ distribution with $ 3 - 1 $ *degrees of freedom* denoted by $ \\chi^2_{2}(x) $, where the subscript is the degrees of freedom. Thus, we reject the null hypothesis if $ T > \\chi^2_{2}(1 - \\alpha) $."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "0fc89ec3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Livro A    29\n",
+       "Livro B    15\n",
+       "Livro C    16\n",
+       "Name: Frequência, dtype: int64"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Read data from Excel file and create a DataFrame\n",
+    "df = pd.read_excel(\n",
+    "    \"Questions Data.xlsx\",\n",
+    "    sheet_name = 'Exercício 7',\n",
+    "    usecols = 'A:D',\n",
+    "    nrows = 1,\n",
+    "    index_col = 0\n",
+    ").squeeze()\n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "1bc0a525",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.050000000000000044\n",
+      "Test Statistic = 6.10000\n",
+      "Critical Value = 5.99146\n",
+      "p-value = 0.04736\n"
+     ]
+    }
+   ],
+   "source": [
+    "exp_mean = 60 / 3 # Expected mean\n",
+    "test_statistic = np.sum((df - exp_mean)**2) / exp_mean\n",
+    "p_value = 1 - stats.chi2.cdf(test_statistic, df = 2)\n",
+    "critical_value = stats.chi2.ppf(1 - 0.05, df = 2)\n",
+    "print(1 - stats.chi2.cdf(critical_value, df = 2))\n",
+    "\n",
+    "print('Test Statistic = {:,.5f}'.format(test_statistic))\n",
+    "print('Critical Value = {:,.5f}'.format(critical_value))\n",
+    "print('p-value = {:,.5f}'.format(p_value))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1de199ae",
+   "metadata": {},
+   "source": [
+    "Since the p-value is lower than $ \\alpha $, we reject the null hypothesis with a 5%-level of significance. However, we would not reject the null hypothesis if we assume a slightly lower significance because the p-value is very close to $ \\alpha $."
    ]
   },
   {
@@ -91,12 +182,13 @@
    "source": [
     "<hr style=\"height:1px;background-color:#999;boder:none\" />\n",
     "<h2> Q8 </h2>\n",
+    "\n",
     "It was collected the total rainfall depth in millimetres (mm) over 14 days at two locations, A and B. A researcher noted that location A appears to have higher variability in the rainfall depth compared to location B. Perform a F-test with a 5%-level of significance to verify whether the variability in the total rainfall depth at location A is statistically higher than the variability at location B. The data is available in the sheet 'Exercício 8' from the file <a href=\"Questions Data.xlsx\">Questions Data.xlsx</a>."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1686d4c8",
+   "id": "4892dfcc",
    "metadata": {},
    "source": [
     "<h3>Answer</h3>\n",
@@ -112,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "f7ca7d4b",
+   "id": "89e19508",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "4174cfe1",
+   "id": "6a97d79f",
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "407858ba",
+   "id": "47f4be2d",
    "metadata": {},
    "source": [
     "Since $ p_{value} < \\alpha $ ($ 0.039 < 0.05 $), we can reject the null hypothesis with a 5% level of significance. Therefore, we have evidence that the total rainfall depth varies more at A than at B."
@@ -654,7 +746,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3df27bcc",
+   "id": "7ed42775",
    "metadata": {},
    "source": [
     "<h3>Answer</h3>\n",
@@ -668,16 +760,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "f3528cb9",
+   "execution_count": 55,
+   "id": "0d1a7e82",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1753536637.py, line 7)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [51]\u001b[0;36m\u001b[0m\n\u001b[0;31m    a = sample_mean -\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confidence Interval = (225.05, 226.95)\n"
      ]
     }
    ],
@@ -688,9 +779,10 @@
     "alpha = 0.05\n",
     "z_alpha_over_2 = stats.norm.ppf(1 - alpha/2)\n",
     "\n",
-    "a = sample_mean - z_alpha_over_2 * sta\n",
+    "a = sample_mean - z_alpha_over_2 * standard_error\n",
+    "b = 2*sample_mean - a\n",
     "\n",
-    "print(\"Confidence Interval (Hospital 2) = ({:,.2f}, {:,.2f})\".format(a, b))"
+    "print(\"Confidence Interval = ({:,.2f}, {:,.2f})\".format(a, b))"
    ]
   }
  ],
