Added question 6 in MBA Data Science/Fundamentals of Statistics/Exercises list

--- a/MBA Data Science/Fundamentals of Statistics/Exercise List/Python Solutions.ipynb
+++ b/MBA Data Science/Fundamentals of Statistics/Exercise List/Python Solutions.ipynb
@@ -73,7 +73,45 @@
    "id": "b18d9500",
    "metadata": {},
    "source": [
-    "## Q6"
+    "<hr style=\"height:1px;background-color:#999;boder:none\" />\n",
+    "<h2> Q6 </h2>\n",
+    "\n",
+    "(Source: Fávero and Belfiore, 2017, Cap. 8) In the last six months, it was done measurements of the time $ X $ over which a product was made in a given process. The obtained sample mean time and the sample standard deviation are 26.5 minutes and 4 minutes respectively. Assuming that this time follows a normal distribution, check the following information:\n",
+    "\n",
+    "a) P(X > 37) <br />\n",
+    "b) P(X < 20) <br />\n",
+    "c) P(22 < X < 28)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fa3bea2",
+   "metadata": {},
+   "source": [
+    "<h3>Answer</h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "50b8f1fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(X > 37) = 0.00433\n",
+      "P(X < 20) = 0.05208\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean = 26.5\n",
+    "std = 4\n",
+    "print('P(X > 37) = {:,.5f}'.format(1 - stats.norm.cdf((37 - mean)/std)))\n",
+    "print('P(X < 20) = {:,.5f}'.format(stats.norm.cdf((20 - mean)/std)))\n",
+    "print('P(22 < X < 28) = {:,.5f}'.format(stats.norm.cdf((28 - mean)/std)) -  stats.norm.cdf((28 - mean)/std)))"
    ]
   },
   {
@@ -89,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5b74f8a",
+   "id": "533e1ede",
    "metadata": {},
    "source": [
     "<h3>Answer</h3>\n",
@@ -107,8 +145,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "0fc89ec3",
+   "execution_count": 91,
+   "id": "171b4cd4",
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +158,7 @@
        "Name: Frequência, dtype: int64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,15 +178,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "id": "1bc0a525",
+   "execution_count": 93,
+   "id": "6312b203",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.050000000000000044\n",
       "Test Statistic = 6.10000\n",
       "Critical Value = 5.99146\n",
       "p-value = 0.04736\n"
@@ -160,7 +197,6 @@
     "test_statistic = np.sum((df - exp_mean)**2) / exp_mean\n",
     "p_value = 1 - stats.chi2.cdf(test_statistic, df = 2)\n",
     "critical_value = stats.chi2.ppf(1 - 0.05, df = 2)\n",
-    "print(1 - stats.chi2.cdf(critical_value, df = 2))\n",
     "\n",
     "print('Test Statistic = {:,.5f}'.format(test_statistic))\n",
     "print('Critical Value = {:,.5f}'.format(critical_value))\n",
@@ -169,10 +205,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1de199ae",
+   "id": "01835e0c",
    "metadata": {},
    "source": [
-    "Since the p-value is lower than $ \\alpha $, we reject the null hypothesis with a 5%-level of significance. However, we would not reject the null hypothesis if we assume a slightly lower significance because the p-value is very close to $ \\alpha $."
+    "Since the p-value is lower than $ \\alpha $, we reject the null hypothesis with a 5%-level of significance. However, the p-value is very close to $ \\alpha $, which implies we would not reject the null hypothesis if we assume a slightly lower significance."
    ]
   },
   {
@@ -188,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4892dfcc",
+   "id": "d1046f93",
    "metadata": {},
    "source": [
     "<h3>Answer</h3>\n",
@@ -204,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "89e19508",
+   "id": "6c33b8a3",
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "6a97d79f",
+   "id": "0846ebc1",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47f4be2d",
+   "id": "64613c4e",
    "metadata": {},
    "source": [
     "Since $ p_{value} < \\alpha $ ($ 0.039 < 0.05 $), we can reject the null hypothesis with a 5% level of significance. Therefore, we have evidence that the total rainfall depth varies more at A than at B."
@@ -746,7 +782,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ed42775",
+   "id": "94f2bfda",
    "metadata": {},
    "source": [
     "<h3>Answer</h3>\n",
@@ -761,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "0d1a7e82",
+   "id": "76bcc82a",
    "metadata": {},
    "outputs": [
     {
