Added question 5 in MBA Data Science/Fundamentals of Statistics/Exercises list

--- a/MBA Data Science/Fundamentals of Statistics/Exercise List/Python Solutions.ipynb
+++ b/MBA Data Science/Fundamentals of Statistics/Exercise List/Python Solutions.ipynb
@@ -65,7 +65,58 @@
    "id": "15776db1",
    "metadata": {},
    "source": [
-    "## Q5"
+    "<hr style=\"height:1px;background-color:#999;boder:none\" />\n",
+    "<h2> Q5 </h2>\n",
+    "\n",
+    "(Source: Fávero and Belfiore, 2017, Cap. 5) Assume that there are 3 operations on stomachs daily at a specific hospital. Considering that the probability of operations in a day follows a Poisson distribution, calculate the probability of occurring 28 operations in the next week (7 days) assuming that the probability of operations in a day follows a **Poisson distribution**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8e3d61b",
+   "metadata": {},
+   "source": [
+    "<h3>Answer</h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "e16fdab1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability of occurring 28 operations in a week is 2.61707%\n"
+     ]
+    }
+   ],
+   "source": [
+    "k = 28 # Operations\n",
+    "r = 21 # Rate [Operations / Week]\n",
+    "print(\"The probability of occurring {:,d} operations in a week is {:,.5f}%\".format(k, stats.poisson.pmf(k, mu = r)*100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "id": "60ac579c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability of occurring 4 operations in a week is 16.80314%\n"
+     ]
+    }
+   ],
+   "source": [
+    "k = 4 # Operations\n",
+    "r = 3 # Rate [Operations /  day]\n",
+    "print(\"The probability of occurring {:,d} operations in a week is {:,.5f}%\".format(k, stats.poisson.pmf(k, mu = r)*100))"
    ]
   },
   {
@@ -76,7 +127,7 @@
     "<hr style=\"height:1px;background-color:#999;boder:none\" />\n",
     "<h2> Q6 </h2>\n",
     "\n",
-    "(Source: Fávero and Belfiore, 2017, Cap. 8) In the last six months, it was done measurements of the time $ X $ over which a product was made in a given process. The obtained sample mean time and the sample standard deviation are 26.5 minutes and 4 minutes respectively. Assuming that this time follows a normal distribution, check the following information:\n",
+    "In the last six months, it was done measurements of the time $ X $ over which a product was made in a given process. The obtained sample mean time and the sample standard deviation are 26.5 minutes and 4 minutes respectively. Assuming that this time follows a normal distribution, check the following information:\n",
     "\n",
     "a) P(X > 37) <br />\n",
     "b) P(X < 20) <br />\n",
@@ -85,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fa3bea2",
+   "id": "ea85984a",
    "metadata": {},
    "source": [
     "<h3>Answer</h3>"
@@ -93,8 +144,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "id": "50b8f1fc",
+   "execution_count": 97,
+   "id": "79bfacea",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +153,8 @@
      "output_type": "stream",
      "text": [
       "P(X > 37) = 0.00433\n",
-      "P(X < 20) = 0.05208\n"
+      "P(X < 20) = 0.05208\n",
+      "P(22 < X < 28) = 0.51588\n"
      ]
     }
    ],
@@ -111,7 +163,7 @@
     "std = 4\n",
     "print('P(X > 37) = {:,.5f}'.format(1 - stats.norm.cdf((37 - mean)/std)))\n",
     "print('P(X < 20) = {:,.5f}'.format(stats.norm.cdf((20 - mean)/std)))\n",
-    "print('P(22 < X < 28) = {:,.5f}'.format(stats.norm.cdf((28 - mean)/std)) -  stats.norm.cdf((28 - mean)/std)))"
+    "print('P(22 < X < 28) = {:,.5f}'.format(stats.norm.cdf((28 - mean)/std) - stats.norm.cdf((22 - mean)/std)))"
    ]
   },
   {
@@ -127,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "533e1ede",
+   "id": "e5444ae1",
    "metadata": {},
    "source": [
     "<h3>Answer</h3>\n",
@@ -146,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "171b4cd4",
+   "id": "797c8e3a",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "6312b203",
+   "id": "a2a37e41",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01835e0c",
+   "id": "0e1d9cf6",
    "metadata": {},
    "source": [
     "Since the p-value is lower than $ \\alpha $, we reject the null hypothesis with a 5%-level of significance. However, the p-value is very close to $ \\alpha $, which implies we would not reject the null hypothesis if we assume a slightly lower significance."
@@ -224,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1046f93",
+   "id": "2bd40e22",
    "metadata": {},
    "source": [
     "<h3>Answer</h3>\n",
@@ -240,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "6c33b8a3",
+   "id": "2b3ffb56",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "0846ebc1",
+   "id": "9d8cc2a2",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64613c4e",
+   "id": "e70bc426",
    "metadata": {},
    "source": [
     "Since $ p_{value} < \\alpha $ ($ 0.039 < 0.05 $), we can reject the null hypothesis with a 5% level of significance. Therefore, we have evidence that the total rainfall depth varies more at A than at B."
@@ -782,7 +834,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94f2bfda",
+   "id": "a8f9f5f6",
    "metadata": {},
    "source": [
     "<h3>Answer</h3>\n",
@@ -797,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "76bcc82a",
+   "id": "cf846254",
    "metadata": {},
    "outputs": [
     {
@@ -819,6 +871,54 @@
     "b = 2*sample_mean - a\n",
     "\n",
     "print(\"Confidence Interval = ({:,.2f}, {:,.2f})\".format(a, b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b445fe22",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "728046b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.10483725588365922"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.7576078383294875"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.09020401043104986"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(stats.poisson.pmf(10, mu = 12))\n",
+    "display(1 - stats.poisson.cdf(9, mu = 12))\n",
+    "display(1 - stats.poisson.cdf(1, mu = 12/24))"
    ]
   }
  ],
